Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16655

Files not accessible after 2.12 -> 2.14/2.15 upgrade

XMLWordPrintable

    • 3
    • 9223372036854775807

      Most of the files are not accessible after 2.12 -> 2.15 upgrade:

      [root@hpcln01 ~]#  ls /mnt/lustre
      ls: cannot access '/mnt/lustre/README': No such file or directory
      ls: cannot access '/mnt/lustre/other': No such file or directory
      ls: cannot access '/mnt/lustre/vol0': No such file or directory
      ls: cannot access '/mnt/lustre/fc': No such file or directory
      README  fc  other  vol0
      [root@hpcln01 ~]#  ls -l /mnt/lustre
      ls: cannot access '/mnt/lustre/README': No such file or directory
      ls: cannot access '/mnt/lustre/other': No such file or directory
      ls: cannot access '/mnt/lustre/vol0': No such file or directory
      ls: cannot access '/mnt/lustre/fc': No such file or directory
      total 0
      -????????? ? ? ? ?            ? README
      d????????? ? ? ? ?            ? fc
      d????????? ? ? ? ?            ? other
      d????????? ? ? ? ?            ? vol0
      [root@hpcln01 ~]#
      

      The system had been functioning correctly before the upgrade.

      The server's kernel log contains messages like the following:

      Mar 20 11:33:04 hpcln02 kernel: LustreError: 1764712:0:(mdt_open.c:1519:mdt_reint_open()) hpcln-MDT0000: name 'README' present, but FID [0x200016cab:0x1e5:0x0] is invalid
      

            zam Alexander Zarochentsev
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved: